examples/kubernetes/deployments/user-subscription-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-subscription-service
spec:
  selector:
    matchLabels:
      app: user-subscription-service
  template:
    metadata:
      labels:
        app: user-subscription-service
    spec:
      containers:
      - name: user-subscription-service
        image: clue/json-server
        volumeMounts:
          - name: data
            mountPath: data
        command:
          - json-server
          - --port
          - "80"
          - server.json
      volumes:
        - name: data
          configMap:
            name: user-subscription-service
---
kind: Service
apiVersion: v1
metadata:
  name: user-subscription-service
spec:
  selector:
    app: user-subscription-service
  ports:
    - name: http
      port: 80
      targetPort: 80
---
