examples/kubernetes/deployments/graphql-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: graphql
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: graphql-gateway
        image: graphql-gateway
---
kind: Service
apiVersion: v1
metadata:
  namespace: graphql
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 8011
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: graphql
  name: schema-registry
spec:
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
      - name: schema-registry
        image: schema-registry
---
kind: Service
apiVersion: v1
metadata:
  namespace: graphql
  name: schema-registry
spec:
  selector:
    app: schema-registry
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: grpc
      port: 81
      targetPort: 81
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: graphql
  name: gql-controller
spec:
  selector:
    matchLabels:
      app: gql-controller
  template:
    metadata:
      labels:
        app: gql-controller
    spec:
      containers:
      - name: gql-controller
        image: gql-controller
---
kind: Service
apiVersion: v1
metadata:
  namespace: graphql
  name: gql-controller
spec:
  selector:
    app: gql-controller
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: gql-controller
webhooks:
  - name: schema-validation-webhook.graph.platform
    rules:
      - apiGroups:
          - "graph.soluto"
        apiVersions:
          - "*"
        operations:
          - "CREATE"
          - "UPDATE"
        resources:
          - gqlschemas
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: "graphql"
        name: "gql-controller"
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVvRENDQW9nQ0NRQytiYWw3VncyYUxqQU5CZ2txaGtpRzl3MEJBUXNGQURBU01SQXdEZ1lEVlFRRERBZG4KY21Gd2FIRnNNQjRYRFRFNU1EUXhOakl3TlRZd05sb1hEVEl3TURReE5USXdOVFl3Tmxvd0VqRVFNQTRHQTFVRQpBd3dIWjNKaGNHaHhiRENDQWlJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFOYjlJdXEwCjZwTlZuaENwV3hsUWhHcUg2dVpOcHZEc0pUMHNCVTdSTEsvQzRKdk1SZ0hzWGdwaHRhT3JIdkYySnpDLzFINnoKUUQwMGtkTjN5SzQwNnBpY2N5QWlwZmZLOC9qeDR3SkZBQnFkL2g0TzZaT0o0UnNzTnpyTHQ4TTErMWZGcExnVApjQUxYbTZPbUFF [...]
